change made to media query height for mobile view

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 
 @media (max-width: 480px) {
     body {
-        height: 70vh;
+        height: 90%;
     }
   .container {
     width: 100vw;
